--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "blackboxcode/pando-account-ticket-bundle": "dev-master",
         "blackboxcode/pando-employee-bundle": "dev-master",
         "blackboxcode/pando-content-bundle": "dev-master",
-        "knplabs/knp-paginator-bundle": "^2.4@dev"
+        "knplabs/knp-paginator-bundle": "^2.4@dev",
+        "doctrine/doctrine-fixtures-bundle": "^2.2@dev"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
